# backend/docs/swagger.yaml
@@ -381,216 +381,4 @@ paths:
       summary: Update a user by ID
       tags:
       - users
-    get:
-    description: Get a list of all of the distinct schools
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              additionalProperties: true
-              type: object
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Get all Schools
-      tags:
-      - users
-  /api/v1/files/sds/{chemicalIdNumber}:
-    delete:
-      description: Deletes the SDS file from Google Cloud Storage and removes the
-        SDS URL from the Firestore document
-      parameters:
-      - description: Chemical ID Number
-        in: path
-        name: chemicalIdNumber
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Delete the SDS file
-      tags:
-      - SDS
-    get:
-      description: Retrieves the SDS file URL for a given chemical
-      parameters:
-      - description: Chemical ID Number
-        in: path
-        name: chemicalIdNumber
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Get the SDS file URL
-      tags:
-      - SDS
-    post:
-      consumes:
-      - multipart/form-data
-      description: Uploads a new SDS file to Google Cloud Storage and updates the
-        Firestore document with the SDS URL
-      parameters:
-      - description: Chemical ID Number
-        in: path
-        name: chemicalIdNumber
-        required: true
-        type: string
-      - description: SDS File
-        in: formData
-        name: sds
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-              type: object
-        summary: Add a new SDS file
-        tags:
-        - SDS
-  /api/v1/files/profile/{userId}:
-    delete:
-      description: Deletes the profile picture from Google Cloud Storage and removes the profile picture URL from the Firestore document
-      parameters:
-      - description: User ID
-        in: path
-        name: userId
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Delete the profile picture
-      tags:
-      - Profile Picture
-    get:
-      description: Retrieves the profile picture URL for a given user
-      parameters:
-      - description: User ID
-        in: path
-        name: userId
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Get the profile picture URL
-      tags:
-      - Profile Picture
-    post:
-      consumes:
-      - multipart/form-data
-      description: Uploads a new profile picture to Google Cloud Storage and updates the Firestore document with the profile picture URL
-      parameters:
-      - description: User ID
-        in: path
-        name: userId
-        required: true
-        type: string
-      - description: Profile Picture File
-        in: formData
-        name: profile_picture
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Add a new profile picture
-      tags:
-      - Profile Picture
 swagger: "2.0"
